src/objects/Grade__c.object
<CustomObject>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <referenceTo>Assessments__c</referenceTo>
        <relationshipLabel>Grades</relationshipLabel>
        <relationshipName>Grades</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <precision>6</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Grades</relationshipLabel>
        <relationshipName>Grades</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Grade</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Grade__c</columns>
        <columns>Student__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>G-{0000}</displayFormat>
        <label>Grade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>